Add user preferences to customize Diffs colors
Changelog: added

Add preview for diffs colors

Move diff color preview to top

Refresh page if color scheme changed

Refine wording of diff color settings

Fix specs & lint

Refine wording of diff color settings (2)

Refactor diff color pickers and preview

Use custom suggested colors

Rename suggested colors

Extend diff preview with idiff content

Apply 2 suggestion(s) to 2 file(s)

Extract util function

Add preference specs

Use lock-retry methodology in DB migration

Polish UserPreference specs

Refactor diff colors

Polish PreferencesHelper specs

Revert removal of !important due to Dark theme

Add frontend specs

Fix RuboCop 'Layout/LineLength'

Adjust setting description

Polish frontend specs

Use Snapshot for diff preview test

--- a/app/assets/stylesheets/highlight/themes/dark.scss
+++ b/app/assets/stylesheets/highlight/themes/dark.scss
@@ -120,6 +120,8 @@ $dark-il: #de935f;
   --color-hljs-selector-id: #{$dark-nn};
   --color-hljs-selector-attr: #{$dark-nt};
   --color-hljs-selector-pseudo: #{$dark-nd};
+  --default-diff-color-deletion: #ff3333;
+  --default-diff-color-addition: #288f2a;
 }
 
 .code.dark {
