Revert "Add Sbom Survey Banner"
- This reverts commit 3c70b090837f50d0c46adbe4b9db501442d5d14e.
- Manually resolve merge conflicts

Changelog: removed

--- a/ee/app/views/projects/dependencies/index.html.haml
+++ b/ee/app/views/projects/dependencies/index.html.haml
@@ -4,5 +4,4 @@
 #js-dependencies-app{ data: { endpoint: project_dependencies_path(@project, format: :json),
   documentation_path: help_page_path('user/application_security/dependency_list/index'),
   support_documentation_path: help_page_path('user/application_security/dependency_scanning/index', anchor: 'supported-languages-and-package-managers'),
-  empty_state_svg_path: image_path('illustrations/Dependency-list-empty-state.svg'),
-  sbom_survey_svg_path: image_path('illustrations/monitoring/tracing.svg')} }
+  empty_state_svg_path: image_path('illustrations/Dependency-list-empty-state.svg') } }
