This MR adds new empty state for corpus management
New component for empty state was added to corpus management. Now
empty state looks consistent with other empty states in security
configuration. New empty state contains illustration, link to
documentation and add new corpus functionality.
Add new corpus functionality was refactored and extracted to
separate component for re-usability. Test were adjusted accordingly.
Changing apollo fetching policies to version 3.x options

Changelog: changed
MR: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/82707
EE: true

--- a/ee/app/views/projects/security/corpus_management/show.html.haml
+++ b/ee/app/views/projects/security/corpus_management/show.html.haml
@@ -3,6 +3,7 @@
 - page_title s_('CorpusManagement|Fuzz testing corpus management')
 
 .js-corpus-management{ data: {project_full_path: @project.full_path,
+            empty_state_svg_path: image_path('illustrations/no_commits.svg'),
             can_upload_corpus: can?(current_user, :create_package, @project).to_s,
             can_read_corpus: can?(current_user, :read_package, @project).to_s,
             can_destroy_corpus: can?(current_user, :destroy_package, @project).to_s } }
