--- a/ee/app/views/registrations/company/new.html.haml
+++ b/ee/app/views/registrations/company/new.html.haml
@@ -1,15 +1,11 @@
 - page_title _('Start your Free Ultimate Trial')
-- content_for :page_specific_javascripts do
-  = render "layouts/google_tag_manager_head"
-  = render "layouts/one_trust"
-= render "layouts/google_tag_manager_body"
 
 .row
   .col-md-6.m-sm-6
     %h2.gl-pb-5.gl-my-0
       = _("About your company")
 
-      #js-company-registration-form{ data: { active: params[:trial] == 'true' } }
+      #js-company-registration-form{ data: { trial: params[:trial] == 'true', create_lead_path: create_lead_trials_path } }
 
   .col-md-4.gl-display-inline-flex.gl-vertical-align-middle
     = image_tag 'illustrations/saas-trial-illustration.svg', alt: '', class: 'gl-display-none d-md-inline gl-w-full'
