Remove finder from issues controller when vue_issues_list enabled
Remove finder as its use is not documented to clean up the code.

--- a/app/views/projects/issues/index.html.haml
+++ b/app/views/projects/issues/index.html.haml
@@ -14,7 +14,7 @@
   project_path: @project.full_path } }
 
 - if Feature.enabled?(:vue_issues_list, @project&.group, default_enabled: :yaml)
-  .js-issues-list{ data: project_issues_list_data(@project, current_user, finder) }
+  .js-issues-list{ data: project_issues_list_data(@project, current_user) }
   - if @can_bulk_update
     = render 'shared/issuable/bulk_update_sidebar', type: :issues
 - elsif project_issues(@project).exists?
