Make spinners in admin/users Pajamas-compliant

--- a/app/views/admin/users/_users.html.haml
+++ b/app/views/admin/users/_users.html.haml
@@ -65,8 +65,7 @@
         = gl_redirect_listbox_tag admin_users_sort_options(filter: params[:filter], search_query: params[:search_query]), @sort, data: { right: true }
 
 #js-admin-users-app{ data: admin_users_data_attributes(@users) }
-  .gl-spinner-container.gl-my-7
-    %span.gl-vertical-align-bottom.gl-spinner.gl-spinner-dark.gl-spinner-lg{ aria: { label: _('Loading') } }
+  = gl_loading_icon(size: 'lg', css_class: 'gl-my-7')
 
 = paginate_collection @users
 
