--- a/ee/app/views/groups/epics/show.html.haml
+++ b/ee/app/views/groups/epics/show.html.haml
@@ -4,6 +4,7 @@
 
 - epic_reference = @epic.to_reference
 - sub_epics_feature_available = @group.licensed_feature_available?(:subepics)
+- related_epics_feature_available = @group.licensed_feature_available?(:related_epics)
 - issuable_health_status_feature_available = @group.licensed_feature_available?(:issuable_health_status)
 - scoped_labels_feature_available = @group.licensed_feature_available?(:scoped_labels)
 
@@ -72,7 +73,7 @@
               inner_height: '600',
               child_epics: 'true' } }
 
-  - if Feature.enabled?(:related_epics_widget, @group, default_enabled: :yaml)
+  - if related_epics_feature_available && Feature.enabled?(:related_epics_widget, @group, default_enabled: :yaml)
     #js-related-epics{ data: { endpoint: group_epic_related_epic_links_path(@group, @epic),
       can_add_related_epics: "#{can?(current_user, :admin_related_epic_link, @epic)}",
       help_path: help_page_path('user/group/epics/linked_epics'),
