Split cluster creation page into two pages
We are changing the cluster creation page from the tabs to the
two separate pages -
new and connect. It should help with the planned deprecations removal.

Changelog: changed

--- a/app/views/clusters/clusters/_sidebar.html.haml
+++ b/app/views/clusters/clusters/_sidebar.html.haml
@@ -1,5 +1,5 @@
-%h4.gl-mt-0
-  = s_('ClusterIntegration|Add a Kubernetes cluster integration')
+%h3
+  = s_('ClusterIntegration|Connect a Kubernetes cluster')
 %p
   = clusterable.sidebar_text
 %p
