Added a create cluster page for the FF
As we want to remove certificate-based cluster creation functionality,
we create a new page for cluster creation that leads to the docs.

Changelog: added

--- a/app/views/clusters/clusters/_sidebar.html.haml
+++ b/app/views/clusters/clusters/_sidebar.html.haml
@@ -1,8 +1,11 @@
+- docs_mode = local_assigns.fetch(:docs_mode, false)
+
 %h3
   = s_('ClusterIntegration|Connect a Kubernetes cluster')
 %p
   = clusterable.sidebar_text
 %p
-  = clusterable.learn_more_link
+  = clusterable.learn_more_link(docs_mode)
 
-= render 'clusters/clusters/multiple_clusters_message'
+- if !docs_mode
+  = render 'clusters/clusters/multiple_clusters_message'
