--- a/app/views/dashboard/todos/index.html.haml
+++ b/app/views/dashboard/todos/index.html.haml
@@ -22,10 +22,10 @@
       - if @allowed_todos.any?(&:pending?)
         .gl-mr-3
           = link_to destroy_all_dashboard_todos_path(todos_filter_params), class: 'gl-button btn btn-default btn-loading align-items-center js-todos-mark-all', method: :delete, data: { href: destroy_all_dashboard_todos_path(todos_filter_params) } do
-            = gl_loading_icon(inline: true, css_class: 'gl-mr-2')
+            = gl_loading_icon(inline: true)
             = s_("Todos|Mark all as done")
           = link_to bulk_restore_dashboard_todos_path, class: 'gl-button btn btn-default btn-loading align-items-center js-todos-undo-all hidden', method: :patch , data: { href: bulk_restore_dashboard_todos_path(todos_filter_params) } do
-            = gl_loading_icon(inline: true, css_class: 'gl-mr-2')
+            = gl_loading_icon(inline: true)
             = s_("Todos|Undo mark all as done")
 
   .todos-filters
