--- a/app/views/projects/_deletion_failed.html.haml
+++ b/app/views/projects/_deletion_failed.html.haml
@@ -1,10 +1,7 @@
 - project = local_assigns.fetch(:project)
 - return unless project.delete_error.present?
 
-.project-deletion-failed-message.gl-alert.gl-alert-warning
-  .gl-alert-container
-    = sprite_icon('warning', size: 16, css_class: 'gl-icon gl-alert-icon gl-alert-icon-no-title')
-    .gl-alert-content
-      .gl-alert-body
-        This project was scheduled for deletion, but failed with the following message:
-        = project.delete_error
+= render 'shared/global_alert', variant: :warning, dismissible: false, alert_class: 'project-deletion-failed-message' do
+  .gl-alert-body
+    This project was scheduled for deletion, but failed with the following message:
+    = project.delete_error
