--- a/ee/app/views/admin/application_settings/advanced_search.html.haml
+++ b/ee/app/views/admin/application_settings/advanced_search.html.haml
@@ -11,13 +11,12 @@
 - if @elasticsearch_warn_if_not_using_aliases
   - content_for :page_level_alert do
     %div{ class: [container_class, @content_class, 'gl-pt-5!'] }
-      .gl-alert{ class: ['gl-alert-warning'] }
-        = sprite_icon('warning', size: 16, css_class: "gl-alert-icon")
-        .gl-alert-content{ role: 'alert' }
-          %h4.gl-alert-title
-            = s_('AdvancedSearch|Reindex required')
-          .gl-alert-body
-            = s_('Introduced in GitLab 13.1, before using %{reindexing_link_start}zero-downtime reindexing%{link_end} and %{migrations_link_start}Advanced Search migrations%{link_end}, you need to %{recreate_link_start}recreate your index%{link_end}.').html_safe % { reindexing_link_start: help_zero_downtime_reindexing_link_start, migrations_link_start: help_advanced_search_migrations_link_start, recreate_link_start: help_recreate_index_link_start, link_end: '</a>'.html_safe }
+      = render 'shared/global_alert',
+        title: s_('AdvancedSearch|Reindex required'),
+        dismissible: false,
+        variant: :warning do
+        .gl-alert-body
+          = s_('Introduced in GitLab 13.1, before using %{reindexing_link_start}zero-downtime reindexing%{link_end} and %{migrations_link_start}Advanced Search migrations%{link_end}, you need to %{recreate_link_start}recreate your index%{link_end}.').html_safe % { reindexing_link_start: help_zero_downtime_reindexing_link_start, migrations_link_start: help_advanced_search_migrations_link_start, recreate_link_start: help_recreate_index_link_start, link_end: '</a>'.html_safe }
 
 = render_if_exists 'admin/application_settings/elasticsearch_form'
 
