--- a/ee/app/views/groups/saml_providers/_response_debug.html.haml
+++ b/ee/app/views/groups/saml_providers/_response_debug.html.haml
@@ -1,11 +1,9 @@
 = bootstrap_form_for @saml_response_check.tap(&:valid?), url: '#', html: { class: 'gl-show-field-errors' } do |f|
   - if f.object.valid?
-    .gl-alert.gl-alert-success
-      .gl-alert-container
-        = sprite_icon('check-circle', css_class: 'gl-icon gl-alert-icon gl-alert-icon-no-title')
-        .gl-alert-content
-          .gl-alert-body
-            = s_('GroupSAML|Valid SAML Response')
+    = render 'shared/global_alert',
+      variant: :success do
+      .gl-alert-body
+        = s_('GroupSAML|Valid SAML Response')
   = f.errors_on :xml_response, hide_attribute_name: true
   = f.text_field :name_id, disabled: true, label: s_('GroupSAML|NameID'), label_class: 'label-bold', input_group_class: 'gl-field-error-anchor'
   = f.text_field :name_id_format, disabled: true, label: s_('GroupSAML|NameID Format'), label_class: 'label-bold', input_group_class: 'gl-field-error-anchor'
