--- a/app/views/shared/runners/_runner_type_alert.html.haml
+++ b/app/views/shared/runners/_runner_type_alert.html.haml
@@ -3,14 +3,16 @@
 - if runner.group_type?
   = render 'shared/global_alert',
     alert_class: alert_class,
-    title: s_('Runners|This runner is available to all projects and subgroups in a group.') do
+    title: s_('Runners|This runner is available to all projects and subgroups in a group.'),
+    dismissible: false do
     .gl-alert-body
       = s_('Runners|Use Group runners when you want all projects in a group to have access to a set of runners.')
       = link_to _('Learn more.'), help_page_path('ci/runners/runners_scope', anchor: 'group-runners'), target: '_blank', rel: 'noopener noreferrer'
 - else
   = render 'shared/global_alert',
     alert_class: alert_class,
-    title: s_('Runners|This runner is associated with specific projects.') do
+    title: s_('Runners|This runner is associated with specific projects.'),
+    dismissible: false do
     .gl-alert-body
       = s_('Runners|You can set up a specific runner to be used by multiple projects but you cannot make this a shared runner.')
       = link_to _('Learn more.'), help_page_path('ci/runners/runners_scope', anchor: 'specific-runners'), target: '_blank', rel: 'noopener noreferrer'
