Update copy for DAST Profile library page
EE: true
Changelog: changed

--- a/ee/app/views/projects/security/dast_profiles/show.html.haml
+++ b/ee/app/views/projects/security/dast_profiles/show.html.haml
@@ -1,5 +1,5 @@
 - add_to_breadcrumbs _('Security Configuration'), project_security_configuration_path(@project)
-- breadcrumb_title s_('DastProfiles|Manage DAST scans')
-- page_title s_('DastProfiles|Manage DAST scans')
+- breadcrumb_title s_('DastProfiles|DAST profile library')
+- page_title s_('DastProfiles|DAST profile library')
 
 .js-dast-profiles{ data: dast_profiles_list_data(@project) }
