--- a/app/views/shared/_prometheus_configuration_banner.html.haml
+++ b/app/views/shared/_prometheus_configuration_banner.html.haml
@@ -1,20 +1,23 @@
-%b
-  = s_('PrometheusService|Prometheus cluster integration')
+- header_tag = local_assigns.fetch(:header_tag)
+- info_well_classes = local_assigns.fetch(:info_well_classes, '')
+- integration = local_assigns.fetch(:integration)
 
-- if service.manual_configuration?
-  .info-well.p-2.mt-2
+= content_tag(header_tag, s_('PrometheusService|Prometheus cluster integration'))
+
+- if integration.manual_configuration?
+  .info-well{ class: info_well_classes }
     = s_('PrometheusService|To use a Prometheus installed on a cluster, deactivate the manual configuration.')
 - else
   .container-fluid
     .row
-      - if service.prometheus_available?
+      - if integration.prometheus_available?
         .col-sm-2
           .svg-container
             = image_tag 'illustrations/monitoring/getting_started.svg'
         .col-sm-10
           %p.text-success.gl-mt-3
             = s_('PrometheusService|You have a cluster with the Prometheus integration enabled.')
-          = link_to s_('PrometheusService|Manage clusters'), project_clusters_path(project), class: 'gl-button btn btn-default'
+          = link_to s_('PrometheusService|Manage clusters'), project_clusters_path(project), class: 'btn gl-button btn-default'
       - else
         .col-sm-2
           = image_tag 'illustrations/monitoring/loading.svg'
