--- a/ee/app/views/projects/_merge_request_status_checks_settings.html.haml
+++ b/ee/app/views/projects/_merge_request_status_checks_settings.html.haml
@@ -5,5 +5,4 @@
     = s_('StatusCheck|Check for a status response in merge requests. Failures do not block merges. %{link_start}Learn more%{link_end}.').html_safe % { link_start: link_start, link_end: '</a>'.html_safe }
 
   #js-status-checks-settings{ status_checks_app_data(@project) }
-    .text-center.gl-mt-3
-      = sprite_icon('spinner', size: 24, css_class: 'gl-spinner')
+    = gl_loading_icon(size: 'md')
