Remove feature flag ci_use_new_monthly_minutes
Enable new CI minutes monthly tracking with lazy
monthly reset.

* Remove Namespace#new_monthly_ci_minutes_enabled?
* Fix Project#ci_minutes_used
* Remove ci_skip_legacy_extra_minutes_recalculation FF

Changelog: changed
EE: true

--- a/ee/app/views/namespaces/pipelines_quota/_list.haml
+++ b/ee/app/views/namespaces/pipelines_quota/_list.haml
@@ -66,7 +66,7 @@
               = project_icon(project, alt: '', class: 'avatar project-avatar s20')
             %strong= link_to project.full_name, project
           %td
-            = project.ci_minutes_used(namespace)
+            = project.ci_minutes_used
       - if projects.blank?
         %tr
           %td{ colspan: 2 }
