When no iterations are present show empty state
Changelog: added
EE: true

--- a/ee/app/views/projects/iterations/index.html.haml
+++ b/ee/app/views/projects/iterations/index.html.haml
@@ -1,3 +1,4 @@
 - page_title _("Iterations")
+- iterations_path = @project&.group ? new_group_iteration_path(@project&.group) : ''
 
-.js-iterations-list{ data: { full_path: @project.full_path } }
+.js-iterations-list{ data: { full_path: @project.full_path, new_iteration_path: iterations_path } }
