--- a/app/views/notify/new_review_email.text.erb
+++ b/app/views/notify/new_review_email.text.erb
@@ -4,8 +4,14 @@
 
 --
 <% @notes.each_with_index do |note, index| %>
+  <!-- Preload author, to prevent N+1 queries-->
+  <% note.author = @author %>
+  <!-- Get preloaded note discussion-->
+  <% discussion = @discussions.try(:[], note.discussion_id) if note.part_of_discussion?%>
+  <!-- Preload project for discussions first note-->
+  <% discussion.first_note.project = @project if discussion&.first_note %>
   <% target_url = project_merge_request_url(@project, @merge_request, anchor: "note_#{note.id}") %>
-  <%= render 'note_email', note: note, diff_limit: 3, target_url: target_url %>
+  <%= render 'note_email', note: note, diff_limit: 3, target_url: target_url, discussion: discussion %>
 
   <% if index != @notes.length-1 %>
 --
